# gemini-image-mcp

./: .gitignore  .npmignore  Cargo.toml  Makefile  README.md  dist-workspace.toml  install.js  package-lock.json  package.json
.github/workflows/: build-and-publish.yml  ci.yml  npm-publish.yml  release.yml
src/: error.rs  gemini_client.rs  image_service.rs  jsonrpc.rs  main.rs  validation.rs
