[package]
name = "gemini-image-mcp"
version = "1.0.6"
edition = "2024"
repository = "https://github.com/ikamman/gemini-image-mcp.git"
description = "MCP server for image analysis and generation using Google's Gemini API"
homepage = "https://github.com/ikamman/gemini-image-mcp#readme"
license = "MIT"
authors = ["Kamil Manka <kamil.manka@gmail.com>"]

[package.metadata.dist]
npm-package = "@ikamman/gemini-image-mcp"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
